# modern_nlp_labs

gradients-lab/: README.md  pyproject.toml
gradients-lab/docs/: lab-gradients.md
gradients-lab/examples/: basic_usage.py  gradients_lab.py
gradients-lab/notebooks/: pytorch-lab.ipynb
gradients-lab/src/gradients_lab/: __init__.py  core.py
gradients-lab/src/gradients_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gradients-lab/tests/: test_gradients.py
transformer-lab/: .gitignore  README.md  pyproject.toml
transformer-lab/docs/: lab-positional-embeddings.md
transformer-lab/examples/: basic_usage.py  positional_lab.py
transformer-lab/notebooks/: positional_embeddings_lab.ipynb  pytorch_shapes_attention_lab.ipynb
transformer-lab/src/transformer_lab/: __init__.py  positional.py
transformer-lab/tests/: test_positional.py
