[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-lab"
version = "0.1.0"
description = "Small PyTorch experiments for sinusoidal positional embeddings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
